Don't crash if MojoNetLog::ShutDown() is called twice.

Bug: 880608
Cq-Include-Trybots: luci.chromium.try:linux_mojo
Change-Id: I065803782935f7e69310a791ecb3053d573fcc61
Reviewed-on: https://chromium-review.googlesource.com/1205534
Reviewed-by: Matt Menke <mmenke@chromium.org>
Commit-Queue: Eric Roman <eroman@chromium.org>
Cr-Commit-Position: refs/heads/master@{#588881}
Former-commit-id: 3e9bb8a4b5d3a863aafd847a51394884a950d518